# ad-res-j7

./: .env.example  .gitignore  .gitmodules  .promise  ADMIN_FEE_FRAUD_ANALYSIS.md  AD_PARAGRAPH_HYPERGRAPH_IMPLEMENTATION.md  AGENTS.md  AGENT_INDEX.md  ANALYSIS_COMPLETE_2025-11-14.md  ANNEXURES_QUICK_REFERENCE_GUIDE.md  ANNEXURES_SF_SERIES_INDEX.md  ANNEXURE_NUMBERING_VALIDATION_COMPLETE.md  ARCHITECTURE.md  ARENA_INDEX.md  ATTACK_HIJACKING_ANALYSIS.md  ATTACK_RESOLUTION_STRATEGY.md  ATTORNEY_EXECUTIVE_BRIEFING.md  ATTORNEY_QUICK_REFERENCE_GUIDE.md  BURDEN_OF_PROOF_FRAMEWORK.md  CASE_KNOWLEDGE_STUDY_2026_03_10.md  CASE_SUMMARY_2025_137857.md  CHAIN_OF_COMMAND_ANALYSIS.md  CHARITY_FRAUD_ANALYSIS.md  CHARITY_FRAUD_PROVISIONS.md  CLAUDE.md  CMakeLists.txt  COMPREHENSIVE_EVIDENCE_INDEX.json  COMPREHENSIVE_EVIDENCE_INDEX.md  COMPREHENSIVE_EVIDENCE_INTEGRATION_2025-11-14.md  COMPREHENSIVE_IMPROVEMENT_SUGGESTIONS.md  CONSOLIDATION_COMPLETE.md  COPILOT_INSTRUCTIONS_README.md  CORRECTED_FRAUD_ANALYSIS.md  CRITICAL_PATH_DEPENDENCIES.md  CRITICAL_REVELATION_PAYMENT_STRUCTURE.md  DANIEL_TECHNICAL_PERSPECTIVE_IMPLEMENTATION.md  DATE_VALIDATION_SUMMARY.md  DJF_AD_HYPERGRAPH_VERIFICATION.md  EMERGENCY_COURT_RESPONSE_PLAN.md  EMPLOYMENT_FRAUD_FRAMEWORK.md  (+152 more)
.github/: README.md  WORKFLOW_MONITORING.md  (+1 more)
archive/analysis-main-snapshot/analysis-main/: .env.example  CROSS_LINK_IMPLEMENTATION_GUIDE.md  DATABASE_SYNC_STATUS_OCT_2025.md  GITHUB_ACTIONS_EMOJI_FIX.md  IMPROVEMENTS_IMPLEMENTED.md  PROFESSIONAL_COMMUNICATION_STANDARDS.md  REPOSITORY_CROSS_LINK_ANALYSIS.md  RWD_OWNERSHIP_CHALLENGE_FACT_BASED.md  SYNC_RESULTS.md  TODO.md  UPDATED_TIMELINE_FROM_ATTACHMENTS.md  activation_propagation_engine.py  backend_api.py  bantjies_centrality_map.md  critical_edges_analysis.md  deep_tree_echo_neon_migration.sql  demo_review_system.py  entity_network_hypergraph.md  fraud_scheme_flow_diagram.md  hypergnn_timeline_integration.md  hypergraph_node_types.md  insert_hypergraph_data_to_neon.py  integrate_new_evidence.py  neon_migration_step1_types.sql  professional_language_validator.py  pyproject.toml  requirements-dev.txt  strict_evidence_report_generator.py  supabase_schema_enhanced.sql  super_sleuth_introspect_analyzer.py  sync_all_improvements.py  sync_enhanced_databases.py  timeline_hypergraph_visualization.md  timeline_validation_against_evidence_REVISION_LOG.md  unified_database_sync.py  validate_review_solution.py  visualize_multi_repo_hypergraph.py
archive/analysis-main-snapshot/analysis-main/.github/workflows/: enhance-affidavits.yml
archive/analysis-main-snapshot/analysis-main/affidavits/: Implementation_Guide_Affidavit_Mitigation.md  README.md
archive/analysis-main-snapshot/analysis-main/affidavits/invariant-guilt-framework/: Invariant_Guilt_Application_Rynette.md
archive/analysis-main-snapshot/analysis-main/backups/affidavits/: RESPONDING_AFFIDAVIT_DRAFT_FACT_BASED_backup_20251013_113146.md
archive/analysis-main-snapshot/analysis-main/cases/templates/: README.md
archive/analysis-main-snapshot/analysis-main/docs/: AFFIDAVIT_REVIEW_SYSTEM.md  EMOJI_USAGE_GUIDE.md  HYPERGRAPHQL_EXAMPLES.md  Screenshot-2025-06-20-Sage-Account-RegimA-Worldwide-Distribution.md  Screenshot-2025-08-25-Sage-Account-RegimA-Worldwide-Distribution.md
archive/analysis-main-snapshot/analysis-main/docs/jacqui-faucitt-draft-response/: CCE20250929.md  CCE20250929_0002.md  CCE20250929_0005.md
archive/analysis-main-snapshot/analysis-main/docs/peter-faucitt-interdict/: CCE20250924.md  CCE20250924_0004.md  CCE20250924_0006.md  CCE20250924_0007.md  CCE20250924_0010.md  CCE20250924_0012.md  CCE20250924_0015.md  CCE20250924_0019.md  CCE20250924_0020.md  CCE20250924_0021.md  CCE20250924_0025.md  CCE20250924_0026.md  CCE20250924_0028.md  CCE20250924_0029.md  CCE20250924_0030.md  CCE20250924_0035.md  CCE20250924_0036.md  CCE20250924_0038.md  CCE20250924_0040.md  CCE20250924_0043.md  CCE20250924_0044.md  CCE20250924_0045.md  CCE20250924_0046.md  CCE20250924_0047.md  CCE20250924_0048.md
archive/analysis-main-snapshot/analysis-main/evidence/: RegimA_Zone_UK_Bank_Shopify_Payments.md  image_2025-10-12_08-53-09.md  image_2025-10-12_08-53-11.md  image_2025-10-12_08-53-14.md  image_2025-10-12_08-53-15.md  image_2025-10-12_08-53-20.md  image_2025-10-12_08-53-24.md  image_2025-10-12_08-53-25.md  image_2025-10-12_08-53-28.md  image_2025-10-12_08-53-29.md  image_2025-10-12_08-53-30.md  image_2025-10-12_08-53-34.md  image_2025-10-12_08-56-17.md  image_2025-10-12_08-57-23.md  image_2025-10-12_08-57-24.md
archive/analysis-main-snapshot/analysis-main/evidence/formal_notice_july_2025_automated/: package_metadata.json
archive/analysis-main-snapshot/analysis-main/evidence/regima_financial_2025/: thumbnail_image006.md
archive/analysis-main-snapshot/analysis-main/migrations/: 001_create_migration_tracking.sql  add_performance_indexes.sql
archive/analysis-main-snapshot/analysis-main/revenue_stream_hijacking_by_rynette/: INDEX.md
archive/analysis-main-snapshot/analysis-main/revenue_stream_hijacking_by_rynette/court_documentation/: Court_Implementation_Framework.md
archive/analysis-main-snapshot/analysis-main/revenue_stream_hijacking_by_rynette/regima_zone_integration/: Technical_Specification.md
archive/analysis-main-snapshot/analysis-main/revenue_stream_hijacking_by_rynette/shopify_platform_analysis/: Platform_Transparency_Analysis.md
archive/analysis-main-snapshot/analysis-main/revenue_stream_hijacking_by_rynette/transparency_demonstration/: Opaque_vs_Transparent_Analysis.md
archive/analysis-main-snapshot/analysis-main/scripts/: README.md
archive/analysis-main-snapshot/analysis-main/skintwin-integration-plan/: data_flow_diagram.md  data_flow_diagram.mmd  integration_plan.md  system_architecture.md  system_architecture.mmd  technology_research.md
archive/analysis-main-snapshot/analysis-main/supplier_catalogue_research/: ingredient_manufacturer_mapping.txt
archive/analysis-main-snapshot/analysis-main/tests/: test_affidavit_enhancement.py  test_emoji_validation.py  test_multi_repo_hypergraph.py  test_project_hypergraphql.py
(+7793 files in other folders)
